--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="background: url(https://i.postimg.cc/NfHwfTZh/th-2.jpg) fixed;  opacity:0.9; background-size: cover; ">
+  <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
