--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body style="background: url(https://i.postimg.cc/rp4htgx8/th-3.jpg) fixed ; background-repeat:no repeat;
+  <body style="background: url(https://i.postimg.cc/B6NMJRYM/brown-water-light-1872294820.webp) fixed;background-size: cover; background-repeat:no repeat;
   ">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
